--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>HTML Calculator</title>
         <meta charset="UTF-8">
         <meta name="Calculator.html" content="A calculator I made to test myself in TS, CSS, and HTML">
+        <meta name="author" content="Max Konietzko">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="Calculator.ts"></script>
         <link rel="stylesheet" type="text/css" href="Calculator.css">
         <link rel=“shortcut icon” href="/favicon.ico" type=“image/x-icon”>
