Fixed font paths

--- a/index.html
+++ b/index.html
@@ -152,9 +152,28 @@
                 <div class="dropdown">
                     <button onclick="myFunction()" class="dropbtn">Key:</button>
                     <div id="myDropdown" class="dropdown-content">
-                        <a href="#">+ = Additionome</a>
+                        <a href="#">+ = Addition</a>
                         <a href="#">x = Multiplication</a>
                         <a href="#">- = Subtraction</a>
+                        <a href="#">÷ = Division</a>
+                        <a href="#">^ = Exponent</a>
+                        <a href="#">% = Percentage</a>
+                        <a href="#">√ = Square Root</a>
+                        <a href="#">³√ = Cube Root</a>
+                        <a href="#">△ = Triangle Area</a>
+                        <a href="#">◬ = Triangle Volume</a>
+                        <a href="#">❑ = Cube Volume</a>
+                        <a href="#">⊿ = Pythagorean Theorem</a>
+                        <a href="#">Mi-Km = Miles to Kilometers</a>
+                        <a href="#">Km-Mi = Kilometers to Miles</a>
+                        <a href="#">Ft-M = Feet to Meters</a>
+                        <a href="#">M-Ft = Meters to Feet</a>
+                        <a href="#">Cm-In = Centimeters to Inches</a>
+                        <a href="#">In-Cm = Inches to Centimeters</a>
+                        <a href="#">°F-°C = Fahrenheit to Celsius</a>
+                        <a href="#">°C-°F = Celsius to Fahrenheit</a>
+                        <a href="#">Kg-Lb = Kilograms to Pounds</a>
+                        <a href="#">Lb-Kg = Pounds to Kilograms</a>
                     </div>
                 </div>
                 
