--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <option value="^">^</option>
                     <option value="%">%</option>
                     <option value="√">√</option>
+                    <option value="³√">³√</option>
                     <option value="△">△</option>
                     <option value="◬">◬</option>
                     <option value="❑">❑</option>
