Added cube root to key

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     ^ = Exponent<br>
                     % = Percentage<br>
                     √ = Sqr Root<br>
+                    ³√ = Cube Root<br>
                     △ = Triangle Area<br>
                     ◬ = Triangular Prism Volume<br>
                     ❑ = Rectangular Prism Volume<br>
