--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
         
         <section class="basicGrid">
             <div class="half">
-                <h1>Calculator</h1>
-                <h3>Made by: Max Konietzko<br> <strong id="smol">(and Tomas Mendoza)</strong> </h3>
+                <h1>
+                    Everything
+                    Calculator
+                </h1>
+                <h3>Made by: Max Konietzko</h3>
 
                 <p id="key">
                     <strong style="font-weight: bold;">Key:<br></strong>
