Added more meta tags

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
         <title>EVERYTHING Calculator</title>
         <meta charset="UTF-8">
         <meta name="google-site-verification" content="sfQkcm9SJpYt7dXCMiTGmIz_QGnwdIMGF3QfXsnPiGI" />
-        <meta name="Calculator.html" content="A calculator I made to test myself in TS, CSS, and HTML">
+        <meta name="description" content="A calculator I made to test myself in TS, CSS, and HTML">
         <meta name="author" content="Max Konietzko">
         <meta name="viewport" content="width=device-width initial-scale=1">
+        <meta name="page-topic" content="Calculator">
+        <meta name="page-type" content="Calculator">
+        <meta name="audience" content="all">
+        <meta name="keywords" content="website, calculator, foo, bar, everything, max konietzko">
+        <meta name="publisher" content="Max Konietzko">
+        <meta name="copyright" content="Max Konietzko">
 
         <script src="Calculator.ts"></script>
         <link rel="stylesheet" type="text/css" href="Calculator.css">
