--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Everything
                     Calculator
                 </h1>
-                <h3>Made by: Max Konietzko</h3>
+                <p>Made by: Max Konietzko</p>
 
                 <p id="key">
                     <strong style="font-weight: bold;">Key:<br></strong>
@@ -45,6 +45,7 @@
                     ◬ = Triangular Prism Volume<br>
                     ❑ = Rectangular Prism Volume<br>
                     ⊿ = Pythagorean Theorem<br> 
+                    ፳ = Prime Number Check<br>
                     Mi-Km = Miles to Kilometers<br>
                     Km-Mi = Kilometers to Miles<br>
                     Ft-M = Feet to Meters<br>
@@ -77,6 +78,7 @@
                     <option value="◬">◬</option>
                     <option value="❑">❑</option>
                     <option value="⊿">⊿</option>
+                    <option value="፳">፳</option>
                     <option value="Mi-Km">Mi-Km</option>
                     <option value="Km-Mi">Km-Mi</option>
                     <option value="Ft-M">Ft-M</option>
