--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>EVERYTHING Calculator</title>
         <meta charset="UTF-8">
         <meta name="google-site-verification" content="5niw6AI_VgQEAKg6KVwCHAtcaB1DDCMyC8XkjQOxYsg" />
+        <!-- Tags for that sweet algorithm manipulation -->
         <meta name="description" content="A calculator I made to test myself in TS, CSS, and HTML">
         <meta name="author" content="Max Konietzko">
         <meta name="viewport" content="width=device-width initial-scale=1">
@@ -15,10 +16,21 @@
         <meta name="publisher" content="Max Konietzko">
         <meta name="copyright" content="Max Konietzko">
 
+        <!-- Script link -->
         <script src="Calculator.ts"></script>
+        <!-- Stylesheet link -->
         <link rel="stylesheet" type="text/css" href="Calculator.css">
+        <!-- favicon link -->
         <link rel=“shortcut icon” href="/favicon.ico" type=“image/x-icon”>
         <link rel=“icon” href="/favicon.ico" type=“image/x-icon”>
+        <!-- Fira code font link -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@700&display=swap" rel="stylesheet">
+        <!-- Rubik Mono One font link -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet"> 
     </head>
     
     <body id="body">
