--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p>Made by: Max Konietzko</p>
 
                 <p id="key">
-                    <strong style="font-weight: bold;">Key:<br></strong>
+                    <strong id="keyTitle">Key:<br></strong>
                     + = Addition<br>
                     x = Multiplication<br>
                     - = Subtraction<br>
