Fixed stylesheet link

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <meta name="copyright" content="Max Konietzko">
 
         <!-- Script link -->
-        <script src="Calculator.ts"></script>
+        <script src="index.ts"></script>
         <!-- Stylesheet link -->
-        <link rel="stylesheet" type="text/css" href="Calculator.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <!-- favicon link -->
         <link rel=“shortcut icon” href="/favicon.ico" type=“image/x-icon”>
         <link rel=“icon” href="/favicon.ico" type=“image/x-icon”>
