--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>EVERYTHING Calculator</title>
         <meta charset="UTF-8">
         <meta name="google-site-verification" content="5niw6AI_VgQEAKg6KVwCHAtcaB1DDCMyC8XkjQOxYsg" />
+        <meta name="google-site-verification" content="ne6ZoZCFuwzCITo6gzwey1Y3hs-ynDgXUcRh27URf2A" />
         <!-- Tags for that sweet algorithm manipulation -->
         <meta name="description" content="A calculator I made to test myself in TS, CSS, and HTML">
         <meta name="author" content="Max Konietzko">
