--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
         <meta name="description" content="A calculator I made to test myself in TS, CSS, and HTML">
         <meta name="author" content="Max Konietzko">
         <meta name="viewport" content="width=device-width initial-scale=1">
-        <meta name="page-topic" content="Calculator">
-        <meta name="page-type" content="Calculator">
-        <meta name="audience" content="all">
         <meta name="keywords" content="website, calculator, foo, bar, everything, max konietzko">
-        <meta name="publisher" content="Max Konietzko">
-        <meta name="copyright" content="Max Konietzko">
 
-        <!-- Script link -->
-        <script src="index.ts"></script>
-        <!-- Stylesheet link -->
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <!-- Import Bumla -->
+        <link rel="stylesheet" href="../bulma.min.css">
+        <!-- Import jQuery -->
+        <script src="../jquery-3.6.0.min.js"></script>
         <!-- favicon link -->
         <link rel=“shortcut icon” href="/favicon.ico" type=“image/x-icon”>
         <link rel=“icon” href="/favicon.ico" type=“image/x-icon”>
@@ -32,10 +27,73 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet"> 
+
+        <!-- Script link -->
+        <script src="index.ts"></script>
+        <!-- Stylesheet link -->
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     
     <body id="body">
-        
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+			<div class="navbar-brand">
+				<a class="navbar-item" href="../index.html">
+					<h1 class="title is-4">++</h1>
+				</a>
+			</div>
+
+			<div class="navbar-menu">
+				<div class="navbar-end">
+					<a class="navbar-item" href="../index.html">
+						Home
+					</a>
+			
+					<a class="navbar-item">
+						About Me
+					</a>
+
+					<div class="navbar-item has-dropdown is-hoverable">
+						<a class="navbar-link">
+							Projects
+						</a>
+			
+						<div class="navbar-dropdown">
+							<a class="navbar-item" href="../HTMLCalculator/index.html">
+								EVERYTING Calculator
+							</a>
+							<a class="navbar-item" href="../AssignmentManager/index.html">
+								Assignment Manager
+							</a>
+							<a class="navbar-item" href="https://github.com/Tomasmenvel/Maid-chan">
+								Maid-Chan
+							</a>
+							<a class="navbar-item" href="https://github.com/Tomasmenvel/Maid-chan/blob/main/Calculator.py">
+								Calculator.py
+							</a>
+							<a class="navbar-item" href="https://github.com/Macko-pp/misc-Projects/blob/main/CalendarFunc.py">
+								Event Calendar
+							</a>
+							<hr class="navbar-divider">
+							<a class="navbar-item" href="mailto:max.konietzko.maya@gmail.com">
+								Report an issue
+							</a>
+						</div>
+					</div>
+
+					<a href="https://github.com/Macko-pp" class="navbar-item github">
+						<svg xmlns="http://www.w3.org/2000/svg" width="25px" height="25px" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+							<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+						</svg>
+					</a>
+					<a href="mailto:max.konietzko.maya@gmail.com" class="navbar-item email">
+						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+							<path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+						</svg>
+					</a>
+				</div>
+			</div>
+		</nav>
+
         <section class="basicGrid">
             <div class="half">
                 <h1>
