Added main webpage icon

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<nav class="navbar" role="navigation" aria-label="main navigation">
 			<div class="navbar-brand">
 				<a class="navbar-item" href="https://macko-pp.github.io/website-pp">
-					<h1 class="title is-4">++</h1>
+					<img src="./resources/Icon.png" alt="icon that reads M++">
 				</a>
 			</div>
 
