--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<!-- Import jQuery -->
 		<script src="./jquery-3.6.0.min.js"></script>
 		<!-- favicon link -->
-		<link rel=“shortcut icon” href="./favicon.ico" type=“image/x-icon”>
-		<link rel=“icon” href="./favicon.ico" type=“image/x-icon”>
+		<link rel="shortcut icon" href="./favicon.ico" type=“image/x-icon”>
+		<link rel=“icon” type="image/x-icon" href="./favicon.ico">
 		<!-- Fira code font link -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
